Fix the right sidebar content not showing up

--- a/src/components/elements/RightSidebar/styles.module.scss
+++ b/src/components/elements/RightSidebar/styles.module.scss
@@ -1,3 +1,3 @@
 .rightSidebar {
-  // margin-left: 10px;
+  display: flex;
 }
